set meta in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
+    <title>vue_firebase_tmp</title>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta property="description", content="vue_firebase_tmp">
+    <meta property="og:title", content="vue_firebase_tmp">
+    <meta property="og:type", content="website">
+    <meta property="og:description", content="vue_firebase_tmp">
+    <meta property="og:url", content="https://fir-tmp-project.firebaseapp.com/">
+    <meta property="og:image", content="https://firebasestorage.googleapis.com/v0/b/fir-tmp-project.appspot.com/o/public%2Fogp.png?alt=media&token=260a3d72-8562-4eb8-9d5b-f71f4e2f364c">
+    <meta property="og:site_name", content="vue_firebase_tmp">
+    <meta name="twitter:card", content="summary_large_image">
+    <meta name="twitter:site", content="@as_kou">
+    <meta name="twitter:creator", content="@as_kou">
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>interim-hiring-applying-bot</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but interim-hiring-applying-bot doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but vue_firebase_tmp doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
