--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <title>vue_firebase_tmp</title>
+    <title>Spot Wrok</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,10 +20,12 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDaolU56reFaMu76xiIibVqpm2N0XxOqcY"></script> -->
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but vue_firebase_tmp doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Spot Wrok doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
